[package]
name = "ils"
description = "Directly read directory in image files."
categories = ["compilers"]
keywords = ["language", "compiler"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
ext4.workspace = true
path-clean.workspace = true
term_grid.workspace = true
terminal_size.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
